Try to fix images in production; always display slider scrollbar

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -167,3 +167,7 @@ ion-item.no-padding {
 .meal-detail-chip {
   margin-left: 0;
 }
+
+.swiper-scrollbar {
+  position: fixed !important;
+}
